<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">>


        <Button
            android:id="@+id/btnPlay"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:onClick="Simulation"
            android:text="Simulation" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

        <TextView
            android:id="@+id/Heading1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5sp"
            android:text="Description"
            android:textSize="24sp"
            android:textStyle="bold" />


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txDesBubble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:text="@string/InsertDes" />

        </ScrollView>

        <TextView
            android:id="@+id/Heading2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5sp"
            android:text="Complexity"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txComplexBubble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:text="@string/InsertCom" />/>

        <TextView
            android:id="@+id/Heading3"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5sp"
            android:text="Algorithm"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/bubbles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/insertion_sort" />


    </LinearLayout>
</ScrollView>

