<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">>

        <Button
            android:id="@+id/btnPlaySel"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:onClick="Simulation"
            android:text="Simulation" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

        <TextView
            android:id="@+id/Heading1Sel"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5sp"
            android:text="Description"
            android:textSize="24sp"
            android:textStyle="bold" />


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txDesSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:text="@string/SelectDes" />

        </ScrollView>

        <TextView
            android:id="@+id/Heading2Sel"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5sp"
            android:text="Complexity"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txComplexSel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:text="@string/SelectCom" />/>

        <TextView
            android:id="@+id/Heading3Sel"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5sp"
            android:text="Algorithm"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/selection_sort" />

    </LinearLayout>
</ScrollView>

